--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/danielrares1/LinkApi#readme",
   "dependencies": {
-    "js2xmlparser": "^4.0.0"
+    "js2xmlparser": "^4.0.0",
+    "request": "^2.88.0"
   }
 }
